Fix: sidebar category list hover style differs by light/dark mode

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -882,11 +882,11 @@ $btn-mb: 0.5rem;
   }
 
   .sidebar-category .card-header {
-    transition: background-color 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
   }
 
   .sidebar-category .list-group-item {
-    transition: background-color 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
   }
 
   .post-preview {
